# eSocialTotalizadorExtractor

./: .gitignore  README.md  pyproject.toml
distt/: esocialtotalizadorextractor-0.1.0-py3-none-any.whl  esocialtotalizadorextractor-0.2.0-py3-none-any.whl  esocialtotalizadorextractor-0.2.1-py3-none-any.whl  esocialtotalizadorextractor-0.2.2-py3-none-any.whl  esocialtotalizadorextractor-0.2.3-py3-none-any.whl
esocialtotalizadorextractor/: extracao.py  extrair.py  lerPlanilhaParaComparacao.py  lerTotalizador.py  testeBanco.py  testeBarra.py  testeExtrair.py  testeExtrair3000.py  testeExtrair5001.py  testeExtrair5002.py  utilitarios.py
esocialtotalizadorextractor/banco/: __init__.py  comparacao.py  db.py  relatorio.py  relatorio5002.py  s3000.py  s5001.py  s5002.py
